fix: Adjust formatting in TeacherService and comment out welcome message in topbar

--- a/src/app/layouts/topbar/topbar.component.html
+++ b/src/app/layouts/topbar/topbar.component.html
@@ -161,7 +161,7 @@
                     </button>
                     <div class="dropdown-menu dropdown-menu-end" ngbDropdownMenu>
                         <!-- item-->
-                        <h6 class="dropdown-header">Welcome {{userData.familyName}}!</h6>
+                        <!-- <h6 class="dropdown-header">Welcome {{userData.familyName}}!</h6> -->
                         <a class="dropdown-item" routerLink="/"><i class="mdi mdi-account-circle-outline text-muted fs-16 align-middle me-1"></i> <span class="align-middle">Profile</span></a>
                         <!-- <a class="dropdown-item" routerLink="/"><i class="mdi mdi-message-text-outline text-muted fs-16 align-middle me-1"></i> <span class="align-middle">Messages</span></a>
                         <a class="dropdown-item" routerLink="/"><i class="mdi mdi-calendar-check-outline text-muted fs-16 align-middle me-1"></i> <span class="align-middle">TaskBoard</span></a> -->
