--- a/src/app/pages/school/configuration/school/school.component.html
+++ b/src/app/pages/school/configuration/school/school.component.html
@@ -4,12 +4,12 @@
         <img src="assets/images/toghu.jpg" class="profile-wid-img" alt="">
         <div class="overlay-content">
             <div class="text-end p-3">
-                <div class="p-0 ms-auto rounded-circle profile-photo-edit">
+                <!-- <div class="p-0 ms-auto rounded-circle profile-photo-edit">
                     <input id="profile-foreground-img-file-input" type="file" class="profile-foreground-img-file-input">
                     <label for="profile-foreground-img-file-input" class="profile-photo-edit btn btn-light">
                         <i class="ri-image-edit-line align-bottom me-1"></i> Change Cover
                     </label>
-                </div>
+                </div> -->
             </div>
         </div>
     </div>
