--- a/src/app/pages/school/configuration/school/school.component.html
+++ b/src/app/pages/school/configuration/school/school.component.html
@@ -39,7 +39,7 @@
             <div class="card-body">
                 <div class="d-flex align-items-center mb-5">
                     <div class="flex-grow-1">
-                        <h5 class="card-title mb-0">Configuration</h5>
+                        <h5 class="card-title mb-0">Configuration Progress</h5>
                     </div>
                     <div class="flex-shrink-0">
                         <a href="javascript:void(0);" class="badge bg-light text-primary fs-12"><i class=" ri-question-line align-bottom me-1"></i></a>
