--- a/src/app/pages/school/personnel/teachers/teachers.component.html
+++ b/src/app/pages/school/personnel/teachers/teachers.component.html
@@ -1,2 +1,58 @@
 <app-breadcrumbs title="PERSONNEL" [breadcrumbItems]="breadCrumbItems"></app-breadcrumbs>
 
+<div class="row">
+    <div class="col-lg-12">
+        <div class="card">
+            <div class="card-header border-bottom-dashed">
+                <div class="row g-4 align-items-center">
+                    <div class="col-sm">
+                        <div>
+                            <h5 class="card-title mb-0"><i class="ri-admin-line text-muted fs-18 align-middle me-1"> </i>Teachers</h5>
+                        </div>
+                    </div>
+                    <div class="col-sm-auto">
+                        <div class="d-flex flex-wrap align-items-start gap-2">
+                            <button type="button" class="btn btn-primary add-btn" data-bs-toggle="modal" data-bs-target="#showModal" (click)="addModal(content)"><i class="ri-user-add-line align-bottom me-1"></i> Add Teachers</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+           <generic-app-table 
+                [headers]="headers" 
+                [data]="teachers" 
+                [showActions]="true" 
+                [showDelete]="true"
+                [showEdit]="true"
+                (deleteClicked)="deleteTeacher($event)"
+                (editClicked)="editModal(content, $event)"
+                tableId="teachersTable">
+            </generic-app-table>
+        </div>
+    </div>
+
+    <app-loading [loading]="loading"></app-loading>
+    <ng-template #content role="document" let-modal>
+        <div class="modal-header p-3 bg-light">
+            <h5 class="modal-title">Add Teacher</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" id="close-modal" (click)="dismissModal()"></button>
+        </div>
+        <form class="tablelist-form" autocomplete="off" autocomplete="off" [formGroup]="addTeacherForm" >
+            <div class="modal-body">
+            <div class="mb-3">
+                    <label class="form-label">Select Employees <span class="text-danger">*</span></label>
+                    <ng-select [items]="employees" formControlName="ids" bindLabel="givenNames" bindValue="id" [multiple]="true" [ngClass]="{ 'is-invalid': submitted && fAddTeachersForm['ids'].invalid }" placeholder="Select Employees">
+                    </ng-select>
+                    <div class="invalid-feedback">You have to select at least one person</div>
+                </div>
+            </div>
+        </form>
+
+        <div class="modal-footer">
+            <div class="hstack gap-2 justify-content-end">
+                <button type="button" class="btn btn-light" data-bs-dismiss="modal" (click)="dismissModal()"><i class="ri-close-line align-bottom me-1"></i> Close</button>
+                <button type="submit" class="btn btn-primary" (click)="onSubmitAddTeacher()" id="add-btn"><i class="ri-save-2-line align-bottom me-1"></i> Save</button>
+            </div>
+        </div>
+    </ng-template>
+</div>
