feat: Update teacher data handling to use teachersToDisplay for improved clarity

--- a/src/app/pages/school/personnel/teachers/teachers.component.html
+++ b/src/app/pages/school/personnel/teachers/teachers.component.html
@@ -20,7 +20,7 @@
 
            <generic-app-table 
                 [headers]="headers" 
-                [data]="teachers" 
+                [data]="teachersToDisplay" 
                 [showActions]="true" 
                 [showDelete]="true"
                 [showEdit]="true"
