feat: Enable delete functionality for teachers in the UI and remove unnecessary lookup call

--- a/src/app/pages/school/personnel/teachers/teachers.component.html
+++ b/src/app/pages/school/personnel/teachers/teachers.component.html
@@ -24,7 +24,8 @@
                 [headers]="headers" 
                 [data]="teachersToDisplay" 
                 [showActions]="true" 
-                [showDelete]="false"
+                [showDelete]="true"
+                [showEdit]="false"
                 [showRowSelect]="true"
                 (selectedRowsChange)="selectedRowsChanged($event)"
                 (deleteClicked)="deleteTeacher($event)"
