--- a/src/app/account/login/login.component.html
+++ b/src/app/account/login/login.component.html
@@ -4,7 +4,8 @@
         <div class="bg-overlay"></div>
 
         <div class="shape">
-            <svg xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 1440 120">
+            <svg xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink"
+                viewBox="0 0 1440 120">
                 <path d="M 0,36 C 144,53.6 432,123.2 720,124 C 1008,124.8 1296,56.8 1440,40L1440 140L0 140z"></path>
             </svg>
         </div>
@@ -40,8 +41,21 @@
                                 <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
 
                                     <div class="mb-3">
+                                        <label class="form-label">Country</label>
+                                        <ng-select appearance="outline" [searchable]="true" [clearable]="false" placeholder="Select Country">
+                                            @for ( data of countriesData; track $index) {
+                                            <ng-option value="batman">
+                                                <img src="{{data.flagImg}}" alt="country flag" class="options-flagimg" height="20">{{data.countryName}}
+                                                <span class="countrylist-codeno text-muted">{{data.countryCode}}</span>
+                                            </ng-option>
+                                            }
+                                        </ng-select>
+                                    </div>
+                                    <div class="mb-3">
                                         <label class="form-label" for="phone">Phone</label>
-                                        <input type="text" class="form-control" id="phone" formControlName="phone" [ngClass]="{ 'is-invalid': submitted && f['phone'].errors }" placeholder="Enter Phone Number">
+                                        <input type="text" class="form-control" id="phone" formControlName="phone"
+                                            [ngClass]="{ 'is-invalid': submitted && f['phone'].errors }"
+                                            placeholder="Enter Phone Number">
                                         @if (submitted && f['phone'].errors) {
                                         <div class="invalid-feedback">
                                             @if(f['phone'].errors['required']){
@@ -56,8 +70,13 @@
                                         </div>
                                         <label class="form-label" for="password-input">Password</label>
                                         <div class="position-relative auth-pass-inputgroup mb-3">
-                                            <input [type]="fieldTextType ? 'text' : 'password'" class="form-control pe-5" placeholder="Enter password" id="password-input" formControlName="password" [ngClass]="{ 'is-invalid': submitted && f['password'].errors }">
-                                            <button class="btn btn-link position-absolute end-0 top-0 text-decoration-none text-muted" type="button" id="password-addon"><i class="mdi align-middle" [ngClass]="{'mdi-eye-off-outline': !fieldTextType, 'mdi-eye-outline': fieldTextType
+                                            <input [type]="fieldTextType ? 'text' : 'password'"
+                                                class="form-control pe-5" placeholder="Enter password"
+                                                id="password-input" formControlName="password"
+                                                [ngClass]="{ 'is-invalid': submitted && f['password'].errors }">
+                                            <button
+                                                class="btn btn-link position-absolute end-0 top-0 text-decoration-none text-muted"
+                                                type="button" id="password-addon"><i class="mdi align-middle" [ngClass]="{'mdi-eye-off-outline': !fieldTextType, 'mdi-eye-outline': fieldTextType
                                           }" (click)="toggleFieldTextType()"></i></button>
                                             @if (submitted && f['password'].errors) {
                                             <div class="invalid-feedback">
@@ -70,12 +89,14 @@
                                     </div>
 
                                     <div class="form-check">
-                                        <input class="form-check-input" type="checkbox" value="" id="auth-remember-check">
+                                        <input class="form-check-input" type="checkbox" value=""
+                                            id="auth-remember-check">
                                         <label class="form-check-label" for="auth-remember-check">Remember me</label>
                                     </div>
 
                                     <div class="mt-4">
-                                        <button class="btn btn-primary w-100" type="submit" [disabled]="loading">Sign In</button>
+                                        <button class="btn btn-primary w-100" type="submit" [disabled]="loading">Sign
+                                            In</button>
                                     </div>
 
                                     <div class="mt-4 text-center">
@@ -83,7 +104,9 @@
                                             <h5 class="fs-13 mb-4 title">Sign In with</h5>
                                         </div>
                                         <div class="d-flex gap-2 justify-content-center">
-                                            <button type="button" class="btn btn-success  btn-icon waves-effect waves-light"><i class="ri-whatsapp-fill fs-16"></i></button>
+                                            <button type="button"
+                                                class="btn btn-success  btn-icon waves-effect waves-light"><i
+                                                    class="ri-whatsapp-fill fs-16"></i></button>
                                         </div>
                                     </div>
                                 </form>
@@ -99,7 +122,8 @@
                     <!-- end card -->
 
                     <div class="mt-4 text-center">
-                        <p class="mb-0">Don't have an account ? <a routerLink="/auth/register" class="fw-semibold text-primary text-decoration-underline"> Signup </a> </p>
+                        <p class="mb-0">Don't have an account ? <a routerLink="/auth/register"
+                                class="fw-semibold text-primary text-decoration-underline"> Signup </a> </p>
                     </div>
 
                 </div>
@@ -129,18 +153,22 @@
 <ng-template #selectInstitutionContent role="document" let-modal>
     <div class="modal-header p-3 bg-primary-subtle">
         <h5 class="modal-title" id="modalLabel1">Select Institution</h5>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" id="close-modal" (click)="closeSelectInstitutionModal()" ></button>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" id="close-modal"
+            (click)="closeSelectInstitutionModal()"></button>
     </div>
     <div style="background-color: #F3F3F9; padding: 1rem;">
         <div class="col-12">
             <div class="mb-4">
-                <p class="text-muted"><code>Multiple institutions found.</code> Please select a default institution. You can always change it later.</p>
+                <p class="text-muted"><code>Multiple institutions found.</code> Please select a default institution. You
+                    can always change it later.</p>
                 <ng-select class="w-100" [(ngModel)]="selectedInstitution" placeholder="Search or select institution">
-                    <ng-option *ngFor="let institution of institutions" [value]="institution">{{institution.name}}({{institution.code}})</ng-option>
+                    <ng-option *ngFor="let institution of institutions"
+                        [value]="institution">{{institution.name}}({{institution.code}})</ng-option>
                 </ng-select>
             </div>
             <div class="mb-4">
-                <button type="button" class="btn btn-primary w-100" [disabled]="!selectedInstitution" (click)="onSelectInstitutionContinue()">Continue  <i class="ri-arrow-right-s-line"></i></button>
+                <button type="button" class="btn btn-primary w-100" [disabled]="!selectedInstitution"
+                    (click)="onSelectInstitutionContinue()">Continue <i class="ri-arrow-right-s-line"></i></button>
             </div>
         </div>
     </div>
@@ -149,32 +177,42 @@
 <ng-template #selectAppContent role="document" let-modal>
     <div class="modal-header p-3 bg-primary-subtle">
         <h5 class="modal-title" id="modalLabel2">Select Application</h5>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" id="close-modal" (click)="closeSelectApplicationModal()" ></button>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" id="close-modal"
+            (click)="closeSelectApplicationModal()"></button>
     </div>
     <div style="background-color: #F3F3F9; padding: 1rem;">
         <div class="p-2">
-            <p class="text-muted"><code>Multiple applications Found.</code> Please select a default application. You can always change it later.</p>
+            <p class="text-muted"><code>Multiple applications Found.</code> Please select a default application. You can
+                always change it later.</p>
             <div class="row g-2">
                 <div class="col-12 col-lg-6">
-                    <button class="btn btn-primary w-100 py-4 d-flex align-items-center justify-content-center" [disabled]="!this.applicationTypes.includes(ApplicationTypeEnum.School)" (click)="onSelectApplication(ApplicationTypeEnum.School)">
+                    <button class="btn btn-primary w-100 py-4 d-flex align-items-center justify-content-center"
+                        [disabled]="!this.applicationTypes.includes(ApplicationTypeEnum.School)"
+                        (click)="onSelectApplication(ApplicationTypeEnum.School)">
                         <img src="assets/images/brands/school.png" alt="school" class="me-2">
                         <span>School</span>
                     </button>
                 </div>
-                <div class="col-12 col-lg-6" >
-                    <button class="btn btn-primary w-100 py-4 d-flex align-items-center justify-content-center" [disabled]="!this.applicationTypes.includes(ApplicationTypeEnum.Student)" (click)="onSelectApplication(ApplicationTypeEnum.Student)">
+                <div class="col-12 col-lg-6">
+                    <button class="btn btn-primary w-100 py-4 d-flex align-items-center justify-content-center"
+                        [disabled]="!this.applicationTypes.includes(ApplicationTypeEnum.Student)"
+                        (click)="onSelectApplication(ApplicationTypeEnum.Student)">
                         <img src="assets/images/brands/graduating-student.png" alt="student" class="me-2">
                         <span>Student</span>
                     </button>
                 </div>
                 <div class="col-12 col-lg-6">
-                    <button class="btn btn-primary w-100 py-4 d-flex align-items-center justify-content-center" [disabled]="!this.applicationTypes.includes(ApplicationTypeEnum.Parent)" (click)="onSelectApplication(ApplicationTypeEnum.Parent)">
+                    <button class="btn btn-primary w-100 py-4 d-flex align-items-center justify-content-center"
+                        [disabled]="!this.applicationTypes.includes(ApplicationTypeEnum.Parent)"
+                        (click)="onSelectApplication(ApplicationTypeEnum.Parent)">
                         <img src="assets/images/brands/family.png" alt="family" class="me-2">
                         <span>Parent</span>
                     </button>
                 </div>
                 <div class="col-12 col-lg-6">
-                    <button class="btn btn-primary w-100 py-4 d-flex align-items-center justify-content-center" [disabled]="!this.applicationTypes.includes(ApplicationTypeEnum.Admin)" (click)="onSelectApplication(ApplicationTypeEnum.Admin)">
+                    <button class="btn btn-primary w-100 py-4 d-flex align-items-center justify-content-center"
+                        [disabled]="!this.applicationTypes.includes(ApplicationTypeEnum.Admin)"
+                        (click)="onSelectApplication(ApplicationTypeEnum.Admin)">
                         <img src="assets/images/brands/system-administrator.png" alt="Admin" class="me-2">
                         <span>Admin</span>
                     </button>
