--- a/src/app/account/register/register.component.html
+++ b/src/app/account/register/register.component.html
@@ -55,8 +55,20 @@
                                     </div>
 
                                     <div class="mb-3">
+                                        <label class="form-label">Country</label>
+                                        <ng-select appearance="outline" [searchable]="true" [clearable]="false" placeholder="Select Country">
+                                            @for ( data of countriesData; track $index) {
+                                            <ng-option value="batman">
+                                                <img src="{{data.flagImg}}" alt="country flag" class="options-flagimg" height="20">{{data.countryName}}
+                                                <span class="countrylist-codeno text-muted">{{data.countryCode}}</span>
+                                            </ng-option>
+                                            }
+                                        </ng-select>
+                                    </div>
+
+                                    <div class="mb-3">
                                         <label for="phone" class="form-label">Phone <span class="text-danger">*</span></label>
-                                        <input type="text" class="form-control" id="phone" placeholder="Enter Phone Number (+237000000000)" required formControlName="phone"
+                                        <input type="text" class="form-control" id="phone" placeholder="Enter Phone Number" required formControlName="phone"
                                             [ngClass]="{ 'is-invalid': submitted && f['phone'].errors }">
                                         <div class="invalid-feedback"> Please Enter phone </div>
                                     </div>
