--- a/src/app/pages/school/results/register-results/register-results.component.html
+++ b/src/app/pages/school/results/register-results/register-results.component.html
@@ -11,7 +11,9 @@
                     </div>
                     <div class="col-sm-auto">
                         <div class="d-flex flex-wrap align-items-start gap-2">
-                            <button type="button" class="btn btn-success" (click)="importResults()"><i class="ri-file-excel-2-line align-bottom me-1"></i> Import Results</button>
+                            <button type="button" class="btn btn-success" (click)="importResults(importResultsContent)"><i class="ri-file-excel-2-line align-bottom me-1"></i> Import</button>
+                            <button type="button" class="btn btn-secondary" (click)="importResults(importResultsContent)"><i class="ri-scales-line align-bottom me-1"></i> Grading Scale</button>
+                            <button type="button" class="btn btn-primary" (click)="importResults(importResultsContent)"><i class="ri-save-2-line align-bottom me-1"></i> Save Results</button>
                         </div>
                     </div>
                      <div class="col-xl-12">
@@ -46,7 +48,6 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
                 </div>
             </div>
             <generic-app-smart-table 
@@ -66,91 +67,21 @@
     </div>
 
     <app-loading [loading]="loading"></app-loading>
-    <!-- <ng-template #content role="document" let-modal>
-        <div class="modal-header p-3 bg-light">
-            <h5 class="modal-title">Add Teacher</h5>
-            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" id="close-modal" (click)="dismissModal()"></button>
-        </div>
-    <form class="tablelist-form" autocomplete="off" autocomplete="off" [formGroup]="addTeacherForm" >
-        <div class="modal-body">
-            <div class="mb-3">
-                <label class="form-label">Select Employees <span class="text-danger">*</span></label>
-                <ng-select [items]="employees" formControlName="ids" bindLabel="givenNames" bindValue="id" [multiple]="true" [ngClass]="{ 'is-invalid': submitted && fAddTeachersForm['ids'].invalid }" placeholder="Select Employees">
-                </ng-select>
-                <div class="invalid-feedback">You have to select at least one person</div>
-            </div>
-        </div>
-    </form>
 
-    <div class="modal-footer">
-        <div class="hstack gap-2 justify-content-end">
-            <button type="button" class="btn btn-light" data-bs-dismiss="modal" (click)="dismissModal()"><i class="ri-close-line align-bottom me-1"></i> Close</button>
-            <button type="submit" class="btn btn-primary" (click)="onSubmitAddTeacher()" id="add-btn"><i class="ri-save-2-line align-bottom me-1"></i> Save</button>
-        </div>
-    </div>
-    </ng-template> -->
-<!-- 
-    <ng-template #manageSubjects role="document" let-modal>
+
+    <ng-template #importResultsContent role="document" let-modal>
         <div class="modal-header p-3 bg-light">
-            <h5 class="modal-title">Manage Teacher Subjects</h5>
+            <h5 class="modal-title">Import Results</h5>
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" id="close-modal" (click)="dismissModal()"></button>
         </div>
-        <form class="tablelist-form" autocomplete="off" autocomplete="off" [formGroup]="teacherSubjectForm" >
-           <div class="modal-body">
-            <div class="mb-3">
-                <label class="form-label">Select Teachers <span class="text-danger">*</span></label>
-                <ng-select [items]="selectedTeachers" formControlName="teacherIds" bindLabel="givenNames" bindValue="id" [multiple]="true" [ngClass]="{ 'is-invalid': submitted && fTeacherSubjectForm['teacherIds'].invalid }" placeholder="Select Teachers">
-                </ng-select>
-                <div class="invalid-feedback">You have to select at least one teacher</div>
-            </div>
-            <div class="mb-3">
-                <label class="form-label">Select Subjects <span class="text-danger">*</span></label>
-                <ng-select [items]="subjects" formControlName="subjectIds" bindLabel="name" bindValue="id" [multiple]="true" [ngClass]="{ 'is-invalid': submitted && fTeacherSubjectForm['subjectIds'].invalid }" placeholder="Select Subjects">
-                </ng-select>
-                <div class="invalid-feedback">You have to select at least one subject</div>
-            </div>
-        </div>
+        <form class="tablelist-form" autocomplete="off" autocomplete="off" >
+          
         </form>
 
         <div class="modal-footer">
             <div class="hstack gap-2 justify-content-end">
-                <button type="button" class="btn btn-primary" data-bs-dismiss="modal" (click)="onSubmitTeacherSubjects()"><i class="ri-add-line align-bottom me-1"></i> Add Subjects</button>
-                <button type="button" class="btn btn-danger" (click)="onSubmitTeacherSubjects(true)" id="add-btn"><i class="ri-delete-bin-line align-bottom me-1"></i> Remove Subjects</button>
+                <button type="button" class="btn btn-primary" data-bs-dismiss="modal" ><i class="ri-add-line align-bottom me-1"></i> Import</button>
             </div>
         </div>
-    </ng-template> -->
-
-    <!-- <ng-template #manageClasses role="document" let-modal>
-        <div class="modal-header p-3 bg-light">
-            <h5 class="modal-title">Manage Teacher Classes</h5>
-            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" id="close-modal" (click)="dismissModal()"></button>
-        </div>
-        <form class="tablelist-form" autocomplete="off" autocomplete="off" [formGroup]="teacherClassForm" >
-           <div class="modal-body">
-            <div class="mb-3">
-                <label class="form-label">Select Teachers <span class="text-danger">*</span></label>
-                <ng-select [items]="selectedTeachers" formControlName="teacherIds" bindLabel="givenNames" bindValue="id" [multiple]="true" [ngClass]="{ 'is-invalid': submitted && fTeacherClassForm['teacherIds'].invalid }" placeholder="Select Teachers">
-                </ng-select>
-                <div class="invalid-feedback">You have to select at least one teacher</div>
-            </div>
-            <div class="mb-3">
-                <label class="form-label">Select Classes <span class="text-danger">*</span></label>
-                <ng-select [items]="classes" formControlName="classIds" bindLabel="name" bindValue="id" [multiple]="true" [ngClass]="{ 'is-invalid': submitted && fTeacherClassForm['classIds'].invalid }" placeholder="Select Classes">
-                </ng-select>
-            <div class="invalid-feedback">You have to select at least one class</div>
-            </div>
-            <div class="mb-3">
-                <label class="form-label">Select Class Section</label>
-                <ng-select [items]="sections" formControlName="classSectionIds" bindLabel="name" bindValue="id" [multiple]="true"  placeholder="Select Class Sections"></ng-select>
-            </div>
-            </div>
-        </form>
-
-        <div class="modal-footer">
-            <div class="hstack gap-2 justify-content-end">
-                <button type="button" class="btn btn-primary" data-bs-dismiss="modal" (click)="onSubmitTeacherClasses(false)"><i class="ri-add-line align-bottom me-1"></i> Add Classes</button>
-                <button type="button" class="btn btn-danger" (click)="onSubmitTeacherClasses(true)" id="add-btn"><i class="ri-delete-bin-line align-bottom me-1"></i> Remove Classes</button>
-            </div>
-        </div>
-    </ng-template> -->
+    </ng-template>
 </div>
