--- a/src/app/pages/school/results/register-results/register-results.component.html
+++ b/src/app/pages/school/results/register-results/register-results.component.html
@@ -106,7 +106,7 @@
                 <div class="modal-body">
                     <div class="mb-3">
                         <label for="scale" class="form-label">Scale</label>
-                        <input disabled="true" type="text" class="form-control" id="scale" placeholder="Scale" [(ngModel)]="scale"name="scale" required>
+                        <input disabled="true" type="text" class="form-control" id="scale" placeholder="Enter Scale" [(ngModel)]="scale"name="scale" required>
                     </div>
                 </div>
             </form>
