--- a/src/app/pages/school/results/register-results/register-results.component.html
+++ b/src/app/pages/school/results/register-results/register-results.component.html
@@ -54,8 +54,9 @@
                     </div>
                 </div>
                 <generic-app-smart-table [headers]="headers" [data]="studentEnrollmentsToDisplay" [showActions]="true"
-                    [showDelete]="true" [editableFields]="editableConfig" [showEdit]="true" [showRowSelect]="true"
+                    [showDelete]="true" [editableFields]="editableConfig" [showEdit]="true" [showRowSelect]="false"
                     (saveClicked)="resultEntered($event)"
+                    (deleteClicked)="deleteResults($event)"
                     [customTemplates]="{ 'sex': sexTemplate, 'dateOfBirth': dateOfBirthTemplate}">
                     <ng-template #sexTemplate let-value>{{getSexLabel(value)}}</ng-template>
                     <ng-template #dateOfBirthTemplate let-value>{{value | date: 'longDate'}}</ng-template>
